--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon backEnd/server.js"
+    "dev": "nodemon backEnd/server.js",
+    "start": "node backEnd/server.js"
   },
   "type": "module",
   "keywords": [],
